--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!doctype html>
+<meta charset="UTF-8"> 
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Raycaster</title>
   </head>
-  <body style='background: #000; margin: 0; padding: 0; width: 100%; height: 100%;'>
-    <canvas id='display' width='1' height='1' style='width: 100%; height: 100%;' />
-
+  <body style='background: #fff; margin: 0; padding: 0; width: 100%; height: 100%;'>
+    <canvas id='display' width='1' height='1' style='width: 99%; height: 99%;' />
+    <script type="text/javascript" src="player.js">
+    </script>
     <script type="text/javascript" src="world.js">
     </script>
-    <script type="text/javascript" src="engine.js">
+    <script type="text/javascript" src="view.js">
     </script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-50885475-1', 'playfuljs.com');
-      ga('send', 'pageview');
+    <script type="text/javascript" src="engine.js">
     </script>
   </body>
 </html>
