--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<meta charset="UTF-8"> 
+<meta charset="UTF-8">
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Raycaster</title>
   </head>
-  <body style='background: #fff; margin: 0; padding: 0; width: 100%; height: 100%;'>
-    <canvas id='display' width='1' height='1' style='width: 99%; height: 99%;' />
+  <body style="margin: 0; padding: 0; width: 100%; height: 100%;">
+    <canvas id="display" width="1" height="1" style="width: 99%; height: 99%;" />
     <script type="text/javascript" src="player.js">
     </script>
     <script type="text/javascript" src="world.js">
